#     http://www.postfixadmin.com or http://postfixadmin.sf.net 
#
# Last update:
# $Id$

Changes after 2.3.3 release (postfixadmin-2.3 branch)
---------------------------------------------------------------

  - generate more secure random passwords
  - squirrelmail plugin: fix typo in variable name
  - list-domain: fix SELECT query to work with PgSQL even when using custom fields

Version 2.3.3 - 2011/03/14 - SVN r1010 (postfixadmin-2.3 branch)
---------------------------------------------------------------

  - create-alias: allow multiple alias targets
  - create-alias, edit-alias: prevent input data loss on validation errors
  - list-virtual: fix displaying of 'modified' column for aliases when using
	postgres
  - replaced deprecated split() with preg_split() or explode()
  - functions.inc.php: better error messages when database functions are missing
  - create domain: fixed typo in variable name that broke the default value for
    default aliases
  - postgres: changed mailbox.quota, domain.quota and domain.maxquota fields
    to bigint to allow mailboxes >4 GB (run setup.php to upgrade your database)
  - vacation.pl logged literal $variable instead of the variable content at two
    places
  - edit-vacation: log enabling/disabling vacation if done by admins
  - POSTFIX_CONF.txt: fixed filename for quota map
  - config.inc.php: removed double $CONF['database_prefix']
  - config.inc.php: fixed comments about domain_post* script parameters
  - updated INSTALL.TXT and UPGRADE.TXT
  - sk translation update
  - some more minor fixes

Version 2.3.2 - 2010/08/24 - SVN r860 (postfixadmin-2.3 branch)
---------------------------------------------------------------

  - SUMMARY: PostfixAdmin 2.3.2 is a bugfix-only release for Postfix Admin 2.3.1
  - SECURITY: attackers could find out if a admin exists (login pre-filled the
    username after "only" a wrong password was entered)
  - SECURITY: fix sql injection in list-domain (only exploitable by superadmins)